--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Nertivia</title>
-    <!-- Google recaptcha -->
-    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
-    </script> 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131765299-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-131765299-1');
-    </script>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but Nertivia doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+  <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- Preview meta tags -->
+  <!-- Search Tags -->
+  <title>Nertivia - Chat Client</title>
+  <meta name="description" content="The best chat client that won’t sell your data. ">
+  <meta name="robots" content="follow, index">
+
+  <!-- FB Open Graph data -->
+  <meta property="og:title" content="Nertivia - Chat Client">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://nertivia.supertiger.tk/img/logo.3287e62d.png">
+  <meta property="og:description" content="The best chat client that won’t sell your data. ">
+  <meta property="og:url" content="https://nertivia.tk/">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="app">
+  <meta name="twitter:title" content="Nertivia - Chat Client">
+  <meta name="twitter:description" content="The best chat client that won’t sell your data. ">
+  <meta name="twitter:image" content="https://nertivia.supertiger.tk/img/logo.3287e62d.png">
+  <meta name="twitter:url" content="https://nertivia.tk/">
+
+  <!-- Preview meta tags -->
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Google recaptcha -->
+  <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
+  </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131765299-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-131765299-1');
+  </script>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but Nertivia doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
