--- a/public/index.html
+++ b/public/index.html
@@ -6,30 +6,36 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
+
   <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
   <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
+  <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
+
+
+
+
 
   <!-- Preview meta tags -->
   <!-- Search Tags -->
   <title>Nertivia - Chat Client</title>
-  <meta name="description" content="The best chat client that won’t sell your data. ">
+  <meta name="description" content="The best chat client that wont restrict you from important and fun features.">
   <meta name="robots" content="follow, index">
 
   <!-- FB Open Graph data -->
   <meta property="og:title" content="Nertivia - Chat Client">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://nertivia.supertiger.tk/img/logo.3287e62d.png">
-  <meta property="og:description" content="The best chat client that won’t sell your data. ">
+  <meta property="og:description" content="The best chat client that wont restrict you from important and fun features.">
   <meta property="og:url" content="https://nertivia.tk/">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="app">
   <meta name="twitter:title" content="Nertivia - Chat Client">
-  <meta name="twitter:description" content="The best chat client that won’t sell your data. ">
+  <meta name="twitter:description" content="The best chat client that wont restrict you from important and fun features.">
   <meta name="twitter:image" content="https://nertivia.supertiger.tk/img/logo.3287e62d.png">
   <meta name="twitter:url" content="https://nertivia.tk/">
 
