--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
   <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
   <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
   <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#2d89ef">
+  <meta name="msapplication-config" content="<%= BASE_URL %>browserconfig.xml">
+  <meta name="theme-color" content="#3fa9f5">
 
 
 
