--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
   </script>
 </head>
 
-<body>
+<body style="background: #292929;">
   <noscript>
     <strong>We're sorry but Nertivia doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
