--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
   <!-- Preview meta tags -->
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" async>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" async>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet" async>
   <!-- Google recaptcha
   <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer> -->
