added warnings to console

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,22 @@
     gtag('js', new Date());
     gtag('config', 'UA-131765299-1');
   </script>
+
+<script async>
+  let devtools = function(){};
+  devtools.toString = function() {
+    this.opened = true;
+  }
+
+  console.log("%cIMPORTANT:", "background: red; color: yellow; font-size: x-large");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+</script>
+
 </head>
 
 <body style="background: #292929;">
