--- a/public/index.html
+++ b/public/index.html
@@ -61,12 +61,12 @@
 
 <script async>
   console.log("%cIMPORTANT:", "background: red; color: yellow; font-size: x-large");
-  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
-  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
-  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
-  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
-  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
-  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
+  console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
 </script>
 
 </head>
