--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
   console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
   console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
   console.log("%cPasting code is dangerous and could cause your account to be hacked.", "background: black; color: white; font-weight: bold;");
+  console.log("%cIf you pasted anything in here (and you have done it not knowing what that script done) reset your password ASAP!", "background: black; color: white; font-weight: bold;");
   window.onerror = function(message, source, lineno, colno, error) { console.log("error happen") }
 </script>
 
