--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 
 
   <link rel="apple-touch-icon" sizes="180x180" href="<%= BASE_URL %>apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon-16x16.png">
+
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
   <link rel="manifest" href="<%= BASE_URL %>site.webmanifest">
   <link rel="mask-icon" href="<%= BASE_URL %>safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#2d89ef">
