changed embed description

--- a/public/index.html
+++ b/public/index.html
@@ -24,20 +24,20 @@
   <!-- Preview meta tags -->
   <!-- Search Tags -->
   <title>Nertivia - Chat Client</title>
-  <meta name="description" content="The best chat client that wont restrict you from important and fun features.">
+  <meta name="description" content="Chatting web app that has a lot of features and is open sourced. This project is made for fun, and someone who is bad at coding.">
   <meta name="robots" content="follow, index">
 
   <!-- FB Open Graph data -->
   <meta property="og:title" content="Nertivia - Chat Client">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://nertivia.supertiger.tk/img/logo.0ca2df64.png">
-  <meta property="og:description" content="The best chat client that wont restrict you from important and fun features.">
+  <meta property="og:description" content="Chatting web app that has a lot of features and is open sourced. This project is made for fun, and someone who is bad at coding.">
   <meta property="og:url" content="https://nertivia.tk/">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="app">
   <meta name="twitter:title" content="Nertivia - Chat Client">
-  <meta name="twitter:description" content="The best chat client that wont restrict you from important and fun features.">
+  <meta name="twitter:description" content="Chatting web app that has a lot of features and is open sourced. This project is made for fun, and someone who is bad at coding.">
   <meta name="twitter:image" content="https://nertivia.supertiger.tk/img/logo.0ca2df64.png">
   <meta name="twitter:url" content="https://nertivia.tk/">
 
