--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,16 @@
   <!-- FB Open Graph data -->
   <meta property="og:title" content="Nertivia - Chat Client">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://nertivia.supertiger.tk/img/logo.0ca2df64.png">
+  <meta property="og:image" content="https://nertivia.net/img/logo.0ca2df64.png">
   <meta property="og:description" content="Chatting web app that has a lot of features and is open sourced. This project is made for fun, and someone who is bad at coding.">
-  <meta property="og:url" content="https://nertivia.tk/">
+  <meta property="og:url" content="https://nertivia.net/">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="app">
   <meta name="twitter:title" content="Nertivia - Chat Client">
   <meta name="twitter:description" content="Chatting web app that has a lot of features and is open sourced. This project is made for fun, and someone who is bad at coding.">
-  <meta name="twitter:image" content="https://nertivia.supertiger.tk/img/logo.0ca2df64.png">
-  <meta name="twitter:url" content="https://nertivia.tk/">
+  <meta name="twitter:image" content="https://nertivia.net/img/logo.0ca2df64.png">
+  <meta name="twitter:url" content="https://nertivia.net/">
 
   <!-- Preview meta tags -->
 
